# Python-Developement-Environment

./: 404.html  Dockerfile  README.md  chapter_1.html  docker-compose.yaml  docker_operations.py  print.html  project_design.html  purpose.html  pyproject.toml  searchindex.js  searchindex.json
docs/: book.toml
docs/src/: SUMMARY.md  chapter_1.md  index.md  project_design.md  purpose.md
src/: C_example.c  PY_example.py
test-docker/: Dockerfile  test_gcc.py
