[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "A sample project using Poetry"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.0"
numpy = "^1.0"
cython = "^0.29" 

[tool.poetry.dev-dependencies]
pytest = "^6.0"
flake8 = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
